2007-06-09  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/ruler.py:
	Use proper definition of "em" and pango units.

2007-06-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* bin/gaupol:
	* data/conf.spec:
	* gaupol/agents/clipboard.py:
	* gaupol/agents/edit.py:
	* gaupol/agents/format.py:
	* gaupol/agents/open.py:
	* gaupol/agents/position.py:
	* gaupol/agents/preview.py:
	* gaupol/agents/register.py:
	* gaupol/agents/save.py:
	* gaupol/agents/search.py:
	* gaupol/agents/set.py:
	* gaupol/agents/text.py:
	* gaupol/agents/util.py:
	* gaupol/base/const.py:
	* gaupol/base/contractual.py:
	* gaupol/base/__init__.py:
	* gaupol/calculator.py:
	* gaupol/clipboard.py:
	* gaupol/const.py:
	* gaupol/converter.py:
	* gaupol/determiner.py:
	* gaupol/enclib.py:
	* gaupol/encodings.py:
	* gaupol/files/ass.py:
	* gaupol/files/__init__.py:
	* gaupol/files/microdvd.py:
	* gaupol/files/mpl2.py:
	* gaupol/files/mpsub.py:
	* gaupol/files/ssa.py:
	* gaupol/files/subfile.py:
	* gaupol/files/subrip.py:
	* gaupol/files/subviewer2.py:
	* gaupol/files/tmplayer.py:
	* gaupol/finder.py:
	* gaupol/gtk/actions/edit.py:
	* gaupol/gtk/actions/file.py:
	* gaupol/gtk/actions/format.py:
	* gaupol/gtk/actions/help.py:
	* gaupol/gtk/actions/__init__.py:
	* gaupol/gtk/actions/position.py:
	* gaupol/gtk/actions/search.py:
	* gaupol/gtk/actions/spellcheck.py:
	* gaupol/gtk/actions/view.py:
	* gaupol/gtk/agents/close.py:
	* gaupol/gtk/agents/edit.py:
	* gaupol/gtk/agents/format.py:
	* gaupol/gtk/agents/help.py:
	* gaupol/gtk/agents/menu.py:
	* gaupol/gtk/agents/open.py:
	* gaupol/gtk/agents/position.py:
	* gaupol/gtk/agents/preview.py:
	* gaupol/gtk/agents/save.py:
	* gaupol/gtk/agents/search.py:
	* gaupol/gtk/agents/spellcheck.py:
	* gaupol/gtk/agents/update.py:
	* gaupol/gtk/agents/view.py:
	* gaupol/gtk/application.py:
	* gaupol/gtk/conf/config.py:
	* gaupol/gtk/conf/container.py:
	* gaupol/gtk/conf/__init__.py:
	* gaupol/gtk/const.py:
	* gaupol/gtk/dialogs/about.py:
	* gaupol/gtk/dialogs/debug.py: